コンソールに実行結果を出すことでlocalとapiのプロファイルの切り替えをすることができた

--- a/src/main/resources/application-api.properties
+++ b/src/main/resources/application-api.properties
@@ -1,8 +1,8 @@
 # API database configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${DB_HOST:api-db-host}:${DB_PORT:5432}/${DB_NAME:book-inventory-management}
-spring.datasource.username=${DB_USER:api-user}
-spring.datasource.password=${DB_PASS:api-password}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:book-inventory-management}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:postgres}
 
 # Stripe configuration
 # stripe.api.key=${STRIPE_API_KEY:your-api-default-stripe-api-key}
