--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
 			<version>1.5.3.Final</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- stripe dependency -->
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>23.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
