StripeAPIを使って決済処理できた。細かい部分は更新する必要あり

--- a/src/main/resources/application-api.properties
+++ b/src/main/resources/application-api.properties
@@ -5,7 +5,7 @@ spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASS:postgres}
 
 # Stripe configuration
-# stripe.api.key=${STRIPE_API_KEY:your-api-default-stripe-api-key}
+stripe.api.key=${STRIPE_API_KEY:your-api-default-stripe-api-key}
 
 # Auth0 configuration
 # auth0.domain=${AUTH0_DOMAIN:your-default-auth0-domain}
