--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
 			<version>23.0.0</version>
 		</dependency>
 
+		<!-- jakarta.annotation-api dependency -->
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
